Fix cards on Safari.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,7 +83,9 @@
 			overflow: hidden;
 
 			#wrapper {
+				backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
+				overflow-scrolling: touch;
 				-webkit-overflow-scrolling: touch;
 				-webkit-transform: translate3d(0,0,0);
 				height: 100vh;
@@ -1728,6 +1730,7 @@
 	  	  width: 100%;
 	  	  height: 100%;
 	  	  backface-visibility: hidden;
+		  -webkit-backface-visibility: hidden;
 	  	}
 
 	  	/* Style the back side */
